[package]
name = "aerobridge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xmlrpc = "0.15"
log = "0.4"
env_logger = "0.10"
ratatui = "0.27.0"
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
