[package]
name = "aerofw"
version = "0.1.0"
edition = "2021"

[dependencies]
# core specific embassy deps
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver"] }

# embassy specific dependencies
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-usb = "=0.2.0"

# required dependencies 
defmt = "0.3.5"
defmt-rtt = "0.4.0"
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
panic-probe = "0.3.1"
static_cell = "=2.0.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }
aeroapi = {path = "../aeroapi", version = "0.1.0"}
postcard = {version = "1.0.8"}
