[package]
name = "aeroapi"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "AeroAPI is a Rust library for interacting with the firmware for aeronode"
homepage = "https://docs.aeronode.io"
repository = "https://github.com/koerolabs/aeronode/aeronode"
readme = "readme.md"

[dependencies]
